service/tests/requests/snapshots/orders/checkout_requires_authentication@orders.snap
---
source: tests/requests/orders.rs
expression: "(response.status_code(), response.text())"
---
(
    401,
    "{\"error\":\"Authentication is required. Please sign in and try again.\",\"code\":\"missing_credentials\"}",
)
