service/tests/requests/snapshots/orders/customer_can_list_own_orders@orders.snap
---
source: tests/requests/orders.rs
expression: "(response.status_code(), body)"
---
(
    200,
    Object {
        "data": Array [
            Object {
                "id": Number(402),
                "pid": String("PID"),
                "orderNumber": Number(2),
                "customerId": Number(11),
                "billingAddressId": Number(302),
                "shippingAddressId": Number(301),
                "customerName": String("John Doe"),
                "customerEmail": String("john.doe@acme.com"),
                "customerImage": String("https://randomuser.me/api/portraits/men/32.jpg"),
                "billingAddressSnapshot": Object {
                    "pid": String("PID"),
                    "city": String("Nairobi"),
                    "email": String("john.doe@acme.com"),
                    "label": String("Billing"),
                    "phone": String("+254700000011"),
                    "region": String("Nairobi County"),
                    "company": String("Acme Trading"),
                    "lineOne": String("14 Riverside Drive"),
                    "lineTwo": Null,
                    "postalCode": String("00100"),
                    "addressType": String("billing"),
                    "countryCode": String("KE"),
                    "recipientName": String("John Doe"),
                },
                "shippingAddressSnapshot": Object {
                    "pid": String("PID"),
                    "city": String("Nairobi"),
                    "email": String("john.doe@acme.com"),
                    "label": String("Home"),
                    "phone": String("+254700000011"),
                    "region": String("Nairobi County"),
                    "company": Null,
                    "lineOne": String("14 Riverside Drive"),
                    "lineTwo": String("Apartment 4B"),
                    "postalCode": String("00100"),
                    "addressType": String("shipping"),
                    "countryCode": String("KE"),
                    "recipientName": String("John Doe"),
                },
                "status": String("completed"),
                "paymentStatus": String("paid"),
                "fulfillmentStatus": String("fulfilled"),
                "currency": String("USD"),
                "subtotal": String("89.99"),
                "discountTotal": String("10.00"),
                "shippingTotal": String("0"),
                "taxTotal": String("8.00"),
                "grandTotal": String("87.99"),
                "customerNote": Null,
                "staffNote": String("Delivered by local courier."),
                "placedAt": String("DATE"),
                "cancelledAt": Null,
                "completedAt": String("DATE"),
                "createdAt": String("DATE"),
                "updatedAt": String("DATE"),
            },
            Object {
                "id": Number(401),
                "pid": String("PID"),
                "orderNumber": Number(1),
                "customerId": Number(11),
                "billingAddressId": Number(302),
                "shippingAddressId": Number(301),
                "customerName": String("John Doe"),
                "customerEmail": String("john.doe@acme.com"),
                "customerImage": String("https://randomuser.me/api/portraits/men/32.jpg"),
                "billingAddressSnapshot": Object {
                    "pid": String("PID"),
                    "city": String("Nairobi"),
                    "email": String("john.doe@acme.com"),
                    "label": String("Billing"),
                    "phone": String("+254700000011"),
                    "region": String("Nairobi County"),
                    "company": String("Acme Trading"),
                    "lineOne": String("14 Riverside Drive"),
                    "lineTwo": Null,
                    "postalCode": String("00100"),
                    "addressType": String("billing"),
                    "countryCode": String("KE"),
                    "recipientName": String("John Doe"),
                },
                "shippingAddressSnapshot": Object {
                    "pid": String("PID"),
                    "city": String("Nairobi"),
                    "email": String("john.doe@acme.com"),
                    "label": String("Home"),
                    "phone": String("+254700000011"),
                    "region": String("Nairobi County"),
                    "company": Null,
                    "lineOne": String("14 Riverside Drive"),
                    "lineTwo": String("Apartment 4B"),
                    "postalCode": String("00100"),
                    "addressType": String("shipping"),
                    "countryCode": String("KE"),
                    "recipientName": String("John Doe"),
                },
                "status": String("confirmed"),
                "paymentStatus": String("paid"),
                "fulfillmentStatus": String("unfulfilled"),
                "currency": String("USD"),
                "subtotal": String("24.99"),
                "discountTotal": String("0"),
                "shippingTotal": String("5.00"),
                "taxTotal": String("4.50"),
                "grandTotal": String("34.49"),
                "customerNote": String("Please leave the parcel with reception."),
                "staffNote": Null,
                "placedAt": String("DATE"),
                "cancelledAt": Null,
                "completedAt": Null,
                "createdAt": String("DATE"),
                "updatedAt": String("DATE"),
            },
        ],
        "pagination": Object {
            "page": Number(1),
            "limit": Number(20),
            "totalItems": Number(2),
            "totalPages": Number(1),
            "hasNext": Bool(false),
            "hasPrev": Bool(false),
        },
    },
)
