service/tests/requests/snapshots/orders/customer_can_list_own_orders_jane@orders.snap
---
source: tests/requests/orders.rs
expression: "(response.status_code(), body)"
---
(
    200,
    Object {
        "data": Array [
            Object {
                "id": Number(408),
                "pid": String("PID"),
                "orderNumber": Number(8),
                "customerId": Number(22),
                "billingAddressId": Number(304),
                "shippingAddressId": Number(303),
                "customerName": String("Jane Smith"),
                "customerEmail": String("jane.smith@globex.com"),
                "customerImage": String("https://randomuser.me/api/portraits/women/44.jpg"),
                "billingAddressSnapshot": Object {
                    "pid": String("PID"),
                    "city": String("Mombasa"),
                    "email": String("jane.smith@globex.com"),
                    "label": String("Office billing"),
                    "phone": String("+254711000022"),
                    "region": String("Mombasa County"),
                    "company": String("Globex East Africa"),
                    "lineOne": String("7 Nkrumah Road"),
                    "lineTwo": String("Floor 3"),
                    "postalCode": String("80100"),
                    "addressType": String("billing"),
                    "countryCode": String("KE"),
                    "recipientName": String("Jane Smith"),
                },
                "shippingAddressSnapshot": Object {
                    "pid": String("PID"),
                    "city": String("Mombasa"),
                    "email": String("jane.smith@globex.com"),
                    "label": String("Home"),
                    "phone": String("+254711000022"),
                    "region": String("Mombasa County"),
                    "company": Null,
                    "lineOne": String("18 Nyali Road"),
                    "lineTwo": String("House 6"),
                    "postalCode": String("80100"),
                    "addressType": String("shipping"),
                    "countryCode": String("KE"),
                    "recipientName": String("Jane Smith"),
                },
                "status": String("confirmed"),
                "paymentStatus": String("authorized"),
                "fulfillmentStatus": String("unfulfilled"),
                "currency": String("USD"),
                "subtotal": String("114.98"),
                "discountTotal": String("15.00"),
                "shippingTotal": String("5.00"),
                "taxTotal": String("9.00"),
                "grandTotal": String("113.98"),
                "customerNote": String("Deliver after 3 PM."),
                "staffNote": String("Card authorized; stock allocated."),
                "placedAt": String("DATE"),
                "cancelledAt": Null,
                "completedAt": Null,
                "createdAt": String("DATE"),
                "updatedAt": String("DATE"),
            },
            Object {
                "id": Number(405),
                "pid": String("PID"),
                "orderNumber": Number(5),
                "customerId": Number(22),
                "billingAddressId": Number(304),
                "shippingAddressId": Number(303),
                "customerName": String("Jane Smith"),
                "customerEmail": String("jane.smith@globex.com"),
                "customerImage": String("https://randomuser.me/api/portraits/women/44.jpg"),
                "billingAddressSnapshot": Object {
                    "pid": String("PID"),
                    "city": String("Mombasa"),
                    "email": String("jane.smith@globex.com"),
                    "label": String("Office billing"),
                    "phone": String("+254711000022"),
                    "region": String("Mombasa County"),
                    "company": String("Globex East Africa"),
                    "lineOne": String("7 Nkrumah Road"),
                    "lineTwo": String("Floor 3"),
                    "postalCode": String("80100"),
                    "addressType": String("billing"),
                    "countryCode": String("KE"),
                    "recipientName": String("Jane Smith"),
                },
                "shippingAddressSnapshot": Object {
                    "pid": String("PID"),
                    "city": String("Mombasa"),
                    "email": String("jane.smith@globex.com"),
                    "label": String("Home"),
                    "phone": String("+254711000022"),
                    "region": String("Mombasa County"),
                    "company": Null,
                    "lineOne": String("18 Nyali Road"),
                    "lineTwo": String("House 6"),
                    "postalCode": String("80100"),
                    "addressType": String("shipping"),
                    "countryCode": String("KE"),
                    "recipientName": String("Jane Smith"),
                },
                "status": String("cancelled"),
                "paymentStatus": String("failed"),
                "fulfillmentStatus": String("cancelled"),
                "currency": String("USD"),
                "subtotal": String("24.99"),
                "discountTotal": String("0"),
                "shippingTotal": String("5.00"),
                "taxTotal": String("0"),
                "grandTotal": String("29.99"),
                "customerNote": Null,
                "staffNote": String("Payment failed twice; order cancelled automatically."),
                "placedAt": String("DATE"),
                "cancelledAt": String("DATE"),
                "completedAt": Null,
                "createdAt": String("DATE"),
                "updatedAt": String("DATE"),
            },
            Object {
                "id": Number(403),
                "pid": String("PID"),
                "orderNumber": Number(3),
                "customerId": Number(22),
                "billingAddressId": Number(304),
                "shippingAddressId": Number(303),
                "customerName": String("Jane Smith"),
                "customerEmail": String("jane.smith@globex.com"),
                "customerImage": String("https://randomuser.me/api/portraits/women/44.jpg"),
                "billingAddressSnapshot": Object {
                    "pid": String("PID"),
                    "city": String("Mombasa"),
                    "email": String("jane.smith@globex.com"),
                    "label": String("Office billing"),
                    "phone": String("+254711000022"),
                    "region": String("Mombasa County"),
                    "company": String("Globex East Africa"),
                    "lineOne": String("7 Nkrumah Road"),
                    "lineTwo": String("Floor 3"),
                    "postalCode": String("80100"),
                    "addressType": String("billing"),
                    "countryCode": String("KE"),
                    "recipientName": String("Jane Smith"),
                },
                "shippingAddressSnapshot": Object {
                    "pid": String("PID"),
                    "city": String("Mombasa"),
                    "email": String("jane.smith@globex.com"),
                    "label": String("Home"),
                    "phone": String("+254711000022"),
                    "region": String("Mombasa County"),
                    "company": Null,
                    "lineOne": String("18 Nyali Road"),
                    "lineTwo": String("House 6"),
                    "postalCode": String("80100"),
                    "addressType": String("shipping"),
                    "countryCode": String("KE"),
                    "recipientName": String("Jane Smith"),
                },
                "status": String("pending"),
                "paymentStatus": String("pending"),
                "fulfillmentStatus": String("unfulfilled"),
                "currency": String("USD"),
                "subtotal": String("49.98"),
                "discountTotal": String("5.00"),
                "shippingTotal": String("5.99"),
                "taxTotal": String("4.50"),
                "grandTotal": String("55.47"),
                "customerNote": String("Call when the courier reaches the gate."),
                "staffNote": Null,
                "placedAt": String("DATE"),
                "cancelledAt": Null,
                "completedAt": Null,
                "createdAt": String("DATE"),
                "updatedAt": String("DATE"),
            },
        ],
        "pagination": Object {
            "page": Number(1),
            "limit": Number(20),
            "totalItems": Number(3),
            "totalPages": Number(1),
            "hasNext": Bool(false),
            "hasPrev": Bool(false),
        },
    },
)
