service/tests/requests/snapshots/orders/customer_can_resume_owned_checkout@orders.snap
---
source: tests/requests/orders.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"orderPid\":\"PID\",\"orderStatus\":\"pending\",\"paymentStatus\":\"pending\",\"attemptStatus\":\"session_created\",\"checkoutUrl\":\"https://checkout.stripe.com/c/pay/customer-resume\",\"expiresAt\":\"DATE\"}",
)
