service/tests/requests/snapshots/orders/customer_can_view_owned_order@orders.snap
---
source: tests/requests/orders.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"order\":{\"id\":401,\"pid\":\"c2c4ed90-7b62-43d2-8b6d-96f4f4f94001\",\"orderNumber\":1,\"customerId\":11,\"billingAddressId\":302,\"shippingAddressId\":301,\"customerName\":\"John Doe\",\"customerEmail\":\"john.doe@acme.com\",\"customerImage\":\"https://randomuser.me/api/portraits/men/32.jpg\",\"billingAddressSnapshot\":{\"pid\":\"a6a0f7e4-2d74-4f2f-aea4-ef3c7b8a7302\",\"city\":\"Nairobi\",\"email\":\"john.doe@acme.com\",\"label\":\"Billing\",\"phone\":\"+254700000011\",\"region\":\"Nairobi County\",\"company\":\"Acme Trading\",\"lineOne\":\"14 Riverside Drive\",\"lineTwo\":null,\"postalCode\":\"00100\",\"addressType\":\"billing\",\"countryCode\":\"KE\",\"recipientName\":\"John Doe\"},\"shippingAddressSnapshot\":{\"pid\":\"4f3d4f3e-1c26-4f5f-a54f-6b5b2b8a7301\",\"city\":\"Nairobi\",\"email\":\"john.doe@acme.com\",\"label\":\"Home\",\"phone\":\"+254700000011\",\"region\":\"Nairobi County\",\"company\":null,\"lineOne\":\"14 Riverside Drive\",\"lineTwo\":\"Apartment 4B\",\"postalCode\":\"00100\",\"addressType\":\"shipping\",\"countryCode\":\"KE\",\"recipientName\":\"John Doe\"},\"status\":\"confirmed\",\"paymentStatus\":\"paid\",\"fulfillmentStatus\":\"unfulfilled\",\"currency\":\"USD\",\"subtotal\":\"24.99\",\"discountTotal\":\"0\",\"shippingTotal\":\"5.00\",\"taxTotal\":\"4.50\",\"grandTotal\":\"34.49\",\"customerNote\":\"Please leave the parcel with reception.\",\"staffNote\":null,\"placedAt\":\"2026-07-03T07:15:00Z\",\"cancelledAt\":null,\"completedAt\":null,\"createdAt\":\"2026-07-03T07:15:00Z\",\"updatedAt\":\"2026-07-03T07:15:00Z\"},\"items\":[{\"id\":501,\"pid\":\"d4cfe48d-b5ef-4caf-9f0c-96f4f4f95001\",\"orderId\":401,\"productId\":201,\"variantId\":201,\"productPid\":\"6d7b16c3-efbf-4e7e-9b70-4f43e1cc3001\",\"variantPid\":\"db365773-2ac1-49aa-a4b9-03dcf8ac3401\",\"productName\":\"Classic Cotton T-shirt\",\"sku\":\"TSHIRT-BLK-M\",\"selectedOptions\":{\"Size\":\"M\",\"Colour\":\"Black\"},\"quantity\":1,\"unitPrice\":\"24.99\",\"discountTotal\":\"0\",\"taxTotal\":\"4.50\",\"lineTotal\":\"29.49\",\"createdAt\":\"2026-07-03T07:15:00Z\",\"updatedAt\":\"2026-07-03T07:15:00Z\"}]}",
)
