service/tests/requests/snapshots/orders/customer_cannot_resume_another_customers_checkout@orders.snap
---
source: tests/requests/orders.rs
expression: "(response.status_code(), response.text())"
---
(
    404,
    "{\"error\":\"Payment attempt does not exist\",\"code\":\"payment_attempt_not_found\"}",
)
