service/tests/requests/snapshots/orders/customer_cannot_update_order_jane@orders.snap
---
source: tests/requests/orders.rs
expression: "(response.status_code(), response.text())"
---
(
    403,
    "{\"error\":\"Forbidden\",\"code\":\"forbidden\"}",
)
