service/tests/requests/snapshots/orders/customer_with_no_orders_gets_empty_list@orders.snap
---
source: tests/requests/orders.rs
expression: "(response.status_code(), body)"
---
(
    200,
    Object {
        "data": Array [],
        "pagination": Object {
            "page": Number(1),
            "limit": Number(20),
            "totalItems": Number(0),
            "totalPages": Number(0),
            "hasNext": Bool(false),
            "hasPrev": Bool(false),
        },
    },
)
